[package]
name = "renderer-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
wgpu = "0.11"
log = "0.4"
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = { version = "0.25", features = ["web-sys"]}
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "0.11"
features = ["webgl"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = ["Window"]

[lib]